feat: implement comprehensive load and stress testing framework (#45)
This commit introduces a complete load and stress testing infrastructure
for the PACS Bridge MLLP/HL7 messaging system, enabling performance
validation and bottleneck identification.

Key components:
- load_types.h: Core type definitions including test configurations,
  metrics collection, latency histograms with percentile calculations
  (P50, P95, P99), and error codes (-960 to -969)
- load_generator.h/cpp: HL7 v2.x message generator supporting ORM^O01,
  ADT^A01, SIU^S12, ORU^R01, and MDM^T02 message types with configurable
  distribution ratios
- load_runner.h/cpp: Test executor implementing sustained, peak,
  endurance, concurrent, and queue stress test scenarios with
  thread-safe metrics collection and progress callbacks
- load_reporter.h/cpp: Multi-format report generator supporting text,
  JSON, Markdown, CSV, and HTML output formats

Test scenarios implemented:
- Sustained load: Constant message rate for extended periods
- Peak load: Burst testing at 2-3x normal capacity
- Endurance: Extended duration testing for memory leak detection
- Concurrent: Multi-connection parallel load testing
- Queue stress: High-rate messaging to test queue limits

Additional changes:
- Updated .gitignore to properly handle testing directories
- Added Testing Module documentation to SDS_COMPONENTS.md (v1.3.0)
- Comprehensive unit tests with 50+ test cases

Performance targets:
- 500+ messages/second sustained throughput
- <50ms P95 latency
- Zero memory leaks in endurance tests

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ compile_commands.json
 vcpkg_installed/
 _deps/
 
-# Testing
-Testing/
+# Testing (CMake output)
+/Testing/
 CTestTestfile.cmake
 
 # Documentation build
