build(cmake): add pacs_adapter module and mwl_client_test (#17)
Update CMake configuration to include the new pacs_adapter module
with MWL client implementation and its unit tests.

Changes:
- CMakeLists.txt:
  - Add src/pacs_adapter/mwl_client.cpp to PACS_BRIDGE_SOURCES
  - Add include/pacs/bridge/pacs_adapter/mwl_client.h to PACS_BRIDGE_HEADERS

- tests/CMakeLists.txt:
  - Add mwl_client_test using add_bridge_test macro
  - Set test labels: unit, pacs_adapter, phase1
  - Update test summary to include mwl_client_test

The pacs_adapter module provides integration with pacs_system's
worklist_scp service for MWL management.

Related: #17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,6 +229,14 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/testing/load_runner.h
 )
 
+# PACS Adapter (pacs_system Integration)
+list(APPEND PACS_BRIDGE_SOURCES
+    src/pacs_adapter/mwl_client.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/pacs_adapter/mwl_client.h
+)
+
 # =============================================================================
 # Create Main Library
 # =============================================================================
