test(integration): add ecosystem dependency verification test
Create comprehensive integration test to verify that all kcenon
ecosystem packages are properly imported and available. This test
serves as a smoke test for the build configuration and validates
Issue #4 acceptance criteria.

Test coverage:
- Build mode detection (standalone vs full integration)
- Feature flag verification (pacs_system, OpenSSL)
- Core module header inclusion (HL7, MLLP, security, monitoring)
- PACS adapter header inclusion (MWL client)
- Type system verification (Result<T>, containers, thread pool)

The test automatically adapts to the build configuration:
- BRIDGE_STANDALONE_BUILD=ON: Tests stub implementations
- BRIDGE_STANDALONE_BUILD=OFF: Tests full ecosystem integration

Running the test:
  cmake -B build -DBRIDGE_BUILD_TESTS=ON
  cmake --build build --target ecosystem_integration_test
  ./build/bin/ecosystem_integration_test

Or via CTest:
  ctest --test-dir build -R ecosystem_integration_test

Traces to: Issue #4, PRD IR-2 (kcenon Ecosystem Integration)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -164,6 +164,15 @@ set_tests_properties(mwl_client_test PROPERTIES
 )
 
 # =============================================================================
+# Ecosystem Integration Test (Issue #4 - Dependency Setup Verification)
+# =============================================================================
+
+add_bridge_test(ecosystem_integration_test)
+set_tests_properties(ecosystem_integration_test PROPERTIES
+    LABELS "integration;ecosystem;phase0"
+)
+
+# =============================================================================
 # Test Summary
 # =============================================================================
 
@@ -188,5 +197,6 @@ message(STATUS "  - health_check_test")
 message(STATUS "  - performance_test")
 message(STATUS "  - load_test")
 message(STATUS "  - mwl_client_test")
+message(STATUS "  - ecosystem_integration_test")
 message(STATUS "==========================")
 message(STATUS "")
