build: add missing performance_types.h header to CMakeLists
Fix header list completeness by adding performance_types.h which was
present in the include directory but missing from the CMakeLists.txt
PACS_BRIDGE_HEADERS list.

Changes:
- Add performance_types.h to performance module headers
- Add PACS System availability to build summary output

The performance_types.h header defines:
- Performance error codes (range -940 to -949)
- Performance targets from SRS requirements
- Configuration structs for thread pool, object pool, memory, etc.
- Real-time performance metrics with atomic counters
- Benchmark configuration and result types

Traces to: Issue #4 (Header Review)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,6 +212,7 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/performance/connection_optimizer.h
     include/pacs/bridge/performance/lockfree_queue.h
     include/pacs/bridge/performance/object_pool.h
+    include/pacs/bridge/performance/performance_types.h
     include/pacs/bridge/performance/thread_pool_manager.h
     include/pacs/bridge/performance/zero_copy_parser.h
 )
@@ -371,6 +372,7 @@ message(STATUS "  Benchmarks:       ${BRIDGE_BUILD_BENCHMARKS}")
 message(STATUS "")
 message(STATUS "Features:")
 message(STATUS "  TLS Support:      ${PACS_BRIDGE_HAS_OPENSSL}")
+message(STATUS "  PACS System:      ${PACS_BRIDGE_HAS_PACS_SYSTEM}")
 message(STATUS "")
 message(STATUS "Install Prefix:     ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "========================================")
