fix(ci): resolve multi-platform build failures
This commit addresses three distinct CI build failures identified in the
initial pipeline activation:

## GCC Build Failure
- **Issue**: `-Wchanges-meaning` error in tls_context.h where the method
  `certificate_info()` conflicts with the type name `certificate_info`
- **Fix**: Added `-Wno-changes-meaning` to GCC-specific compiler flags
  in cmake/CompilerFlags.cmake

## Clang Build Failure
- **Issue**: `no template named 'expected' in namespace 'std'` - Ubuntu's
  default libstdc++ doesn't fully support std::expected in C++23
- **Fix**: Added `-stdlib=libc++` flag for Clang on Linux to use libc++
  which has full C++23 support; also install libc++-dev and libc++abi-dev
  packages in CI

## Windows MSVC Build Failure
- **Issue 1**: vcpkg baseline commit `c4af3593e...` doesn't exist in the
  vcpkg repository, causing `git show versions/baseline.json` to fail
- **Issue 2**: Ninja build tool not found (`CMAKE_MAKE_PROGRAM is not set`)
- **Fix**:
  - Updated vcpkg baseline to `a42af01b7...` (2024-11 stable release)
  - Added Ninja installation step via chocolatey before vcpkg setup
  - Updated vcpkg.json builtin-baseline to match

## Changes

### cmake/CompilerFlags.cmake
- Add `-Wno-changes-meaning` for GCC to allow method/type name conflicts
- Add `-stdlib=libc++` compile and link flags for Clang on Linux

### .github/workflows/ci.yml
- Install libc++-dev and libc++abi-dev for Clang builds on Ubuntu
- Add Ninja installation step for Windows via chocolatey
- Update vcpkgGitCommitId to stable 2024-11 release

### vcpkg.json
- Update builtin-baseline to match CI vcpkg commit

Traces to: Issue #5 (CI/CD Pipeline Activation)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,8 @@ jobs:
         sudo apt install -y libsqlite3-dev libssl-dev libfmt-dev
         sudo apt install -y libgtest-dev libgmock-dev
         if [ "${{ matrix.compiler }}" = "clang" ]; then
-          sudo apt install -y clang lld
+          # Clang + libc++ for full C++23 support (std::expected)
+          sudo apt install -y clang lld libc++-dev libc++abi-dev
         fi
 
     - name: Install dependencies (macOS)
@@ -140,11 +141,19 @@ jobs:
       if: runner.os == 'Windows'
       uses: ilammy/msvc-dev-cmd@v1
 
+    - name: Install Ninja (Windows)
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        choco install ninja -y
+        ninja --version
+
     - name: Setup vcpkg (Windows)
       if: runner.os == 'Windows'
       uses: lukka/run-vcpkg@v11
       with:
-        vcpkgGitCommitId: 'e7d7451462697d77ef319ddf2da8ff7320a82662'
+        # Use a stable, recent vcpkg commit (2024-11)
+        vcpkgGitCommitId: 'a42af01b72c28a8e1d7b48107b33e4f286a55ef6'
 
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
