fix(ci): use pre-installed vcpkg on Windows runner
The previous fix used lukka/run-vcpkg@v11 with a custom vcpkg commit ID,
but this caused issues with outdated mirror URLs (mingw-w64-i686-pkgconf
returning 404 errors from all MSYS2 mirrors).

This commit removes the run-vcpkg action and instead uses the pre-installed
vcpkg that comes with GitHub Actions windows-2022 runners. The VCPKG_ROOT
environment variable is already set to C:\vcpkg on these runners.

Changes:
- Remove lukka/run-vcpkg@v11 action
- Use vcpkg integrate install to prepare for CMake integration
- The existing CMake configure step already uses $env:VCPKG_ROOT

This approach is more stable as Microsoft maintains the vcpkg version
on their GitHub Actions runners.

Traces to: Issue #5 (CI/CD Pipeline Activation)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,17 +148,14 @@ jobs:
         choco install ninja -y
         ninja --version
 
-    - name: Setup vcpkg (Windows)
-      if: runner.os == 'Windows'
-      uses: lukka/run-vcpkg@v11
-      with:
-        # Use a stable, recent vcpkg commit (2024-11)
-        vcpkgGitCommitId: 'a42af01b72c28a8e1d7b48107b33e4f286a55ef6'
-
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
+        # Use pre-installed vcpkg on GitHub Actions runner
+        # Note: VCPKG_ROOT is already set to C:\vcpkg on windows-2022 runners
+        Write-Host "Using vcpkg from: $env:VCPKG_ROOT"
+        vcpkg integrate install
         vcpkg install sqlite3:x64-windows openssl:x64-windows fmt:x64-windows gtest:x64-windows
 
     # Note: BRIDGE_BUILD_TESTS=OFF until test/API sync is completed (Issue #6)
