fix(ci): resolve Windows vcpkg manifest mode and Ninja PATH issues
This commit addresses two remaining Windows CI build failures:

## vcpkg Manifest Mode Issue
- **Problem**: Project's vcpkg.json specifies a custom baseline and version
  constraints that conflict with the pre-installed vcpkg on GitHub runners
- **Error**: "no version database entry for nlohmann-json at 3.11.0"
- **Fix**: Add `-DVCPKG_MANIFEST_MODE=OFF` to disable manifest mode and use
  packages installed via `vcpkg install` command instead

## Ninja PATH Issue
- **Problem**: Ninja installed via chocolatey is not in PATH for the CMake
  configure step (environment not refreshed after choco install)
- **Error**: "CMake was unable to find a build program corresponding to Ninja"
- **Fix**: Refresh PATH from Machine and User environment variables before
  running CMake configure

These changes allow Windows builds to use the pre-installed vcpkg packages
without requiring manifest mode compatibility.

Traces to: Issue #5 (CI/CD Pipeline Activation)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,6 +180,9 @@ jobs:
       working-directory: pacs_bridge
       shell: pwsh
       run: |
+        # Refresh PATH to include Ninja from chocolatey
+        $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
+
         cmake -B build `
           -G Ninja `
           -DCMAKE_BUILD_TYPE=Release `
@@ -188,7 +191,8 @@ jobs:
           -DBRIDGE_BUILD_EXAMPLES=OFF `
           -DBRIDGE_BUILD_HL7=ON `
           -DBRIDGE_BUILD_FHIR=OFF `
-          -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
+          -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
+          -DVCPKG_MANIFEST_MODE=OFF
 
     - name: Build
       working-directory: pacs_bridge
