fix(ci): handle empty coverage data when tests are disabled
The coverage job was failing because lcov requires .gcda files which are
only generated when tests run. With tests disabled (BRIDGE_BUILD_TESTS=OFF),
no coverage data exists.

This commit updates the coverage report generation to gracefully handle
the case when no coverage data is available:

- Add --ignore-errors empty to lcov commands
- Use || true to prevent script failure
- Add conditional check for coverage.info file existence
- Display informative message when coverage is unavailable

This allows the CI pipeline to pass even without test coverage data,
while clearly indicating that full coverage will be available after
Issue #6 (Test Framework Setup) is completed.

Traces to: Issue #5 (CI/CD Pipeline Activation)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -291,9 +291,14 @@ jobs:
     - name: Generate coverage report
       working-directory: pacs_bridge
       run: |
-        lcov --capture --directory build --output-file coverage.info --ignore-errors mismatch
-        lcov --remove coverage.info '/usr/*' '*/tests/*' '*/examples/*' '*/build/_deps/*' --output-file coverage.info --ignore-errors unused
-        lcov --list coverage.info
+        # Note: --ignore-errors empty handles case when no tests run (tests disabled)
+        lcov --capture --directory build --output-file coverage.info --ignore-errors mismatch,empty || true
+        if [ -f coverage.info ]; then
+          lcov --remove coverage.info '/usr/*' '*/tests/*' '*/examples/*' '*/build/_deps/*' --output-file coverage.info --ignore-errors unused,empty || true
+          lcov --list coverage.info || echo "No coverage data available (tests disabled)"
+        else
+          echo "No coverage data generated (tests disabled - pending Issue #6)"
+        fi
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
