test(integration): add Phase 2 integration test infrastructure (#29)
This commit implements comprehensive integration tests for the MPPS
(Modality Performed Procedure Step) and bidirectional messaging
functionality as specified in Issue #29.

## Test Infrastructure

### Base Components (integration_test_base.h)
- Test macros for assertions and test execution with timing
- MPPS status codes enum (in_progress, completed, discontinued)
- test_message_queue: Persistent queue for testing recovery scenarios
- mock_ris_server: Simulated RIS endpoint for integration testing
- mpps_bridge_simulator: Converts MPPS events to HL7 ORM messages
- integration_test_fixture: Common utilities for test setup/teardown
- mpps_event_generator: Sample data generation for tests

### MPPS Integration Tests (mpps_integration_test.cpp)
- MPPS In Progress Flow (N-CREATE -> ORM^O01 with IP status)
- MPPS Completion Flow (N-SET COMPLETED -> ORM^O01 with CM status)
- MPPS Discontinuation Flow (N-SET DISCONTINUED -> ORM^O01 with DC)
- Complete workflow tests (N-CREATE followed by N-SET)
- Error handling tests (RIS unavailable, slow response)

### Queue Persistence Tests (queue_persistence_test.cpp)
- Basic disk persistence verification
- FIFO ordering preservation after recovery
- RIS unavailability recovery scenarios
- System restart recovery simulation
- Partial delivery recovery
- Edge cases (empty queue, large messages)

### Failover Routing Tests (failover_test.cpp)
- Primary RIS routing verification
- Automatic failover to backup RIS
- Failback to primary after recovery
- Multiple backup destination support
- Rapid failover/failback cycle stability
- Statistics tracking verification

### Stress Tests (stress_test.cpp)
- Sequential moderate load (100 messages)
- Concurrent senders (4-8 parallel threads)
- High volume burst (500 messages)
- Latency measurement (p95, p99 percentiles)
- Sustained load over time
- Recovery after overload
- MPPS-specific high volume testing

## CMake Integration
-

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -173,6 +173,68 @@ set_tests_properties(ecosystem_integration_test PROPERTIES
 )
 
 # =============================================================================
+# Phase 2 Integration Tests (Issue #29 - MPPS & Bidirectional)
+# =============================================================================
+
+# Macro for integration tests (longer timeout, different labels)
+macro(add_integration_test TEST_NAME)
+    add_executable(${TEST_NAME} integration/${TEST_NAME}.cpp)
+
+    target_link_libraries(${TEST_NAME}
+        PRIVATE
+            pacs_bridge
+            pacs_bridge_compile_options
+    )
+
+    target_include_directories(${TEST_NAME}
+        PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/integration
+    )
+
+    target_compile_definitions(${TEST_NAME}
+        PRIVATE
+            PACS_BRIDGE_TEST_DATA_DIR="${PACS_BRIDGE_TEST_DATA_DIR}"
+    )
+
+    add_test(
+        NAME ${TEST_NAME}
+        COMMAND ${TEST_NAME}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+
+    # Integration tests have longer timeout
+    set_tests_properties(${TEST_NAME} PROPERTIES
+        TIMEOUT 300
+        LABELS "integration;phase2"
+    )
+endmacro()
+
+# MPPS Integration Tests (N-CREATE/N-SET flows)
+add_integration_test(mpps_integration_test)
+set_tests_properties(mpps_integration_test PROPERTIES
+    LABELS "integration;mpps;phase2"
+)
+
+# Queue Persistence Tests (message recovery)
+add_integration_test(queue_persistence_test)
+set_tests_properties(queue_persistence_test PROPERTIES
+    LABELS "integration;queue;phase2"
+)
+
+# Failover Routing Tests (RIS failover)
+add_integration_test(failover_test)
+set_tests_properties(failover_test PROPERTIES
+    LABELS "integration;failover;phase2"
+)
+
+# Stress Tests (high volume)
+add_integration_test(stress_test)
+set_tests_properties(stress_test PROPERTIES
+    LABELS "integration;stress;phase2"
+    TIMEOUT 600  # Stress tests may take longer
+)
+
+# =============================================================================
 # Test Summary
 # =============================================================================
 
@@ -198,5 +260,11 @@ message(STATUS "  - performance_test")
 message(STATUS "  - load_test")
 message(STATUS "  - mwl_client_test")
 message(STATUS "  - ecosystem_integration_test")
+message(STATUS "")
+message(STATUS "Phase 2 Integration Tests:")
+message(STATUS "  - mpps_integration_test")
+message(STATUS "  - queue_persistence_test")
+message(STATUS "  - failover_test")
+message(STATUS "  - stress_test")
 message(STATUS "==========================")
 message(STATUS "")
