docs(ci): document Phase 2 integration tests in CI workflow
Added documentation comments to the CI workflow file listing all test
suites including the new Phase 2 integration tests:

- mpps_integration_test: MPPS N-CREATE/N-SET message flows
- queue_persistence_test: Message queue recovery scenarios
- failover_test: RIS failover routing
- stress_test: High volume load testing

These tests will be enabled when Issue #6 (test/API sync) is resolved.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,16 @@
 #
 # Note: Uses Ubuntu 24.04 for GCC 13+ support which provides std::format
 # (required by logger_system dependency)
+#
+# Test Suites:
+#   Unit Tests (Phase 1): hl7_test, mapping_test, router_test, cache_test,
+#                         mllp_test, config_test, security_test, tls_test,
+#                         health_check_test, performance_test, load_test
+#   Integration Tests (Phase 2, Issue #29):
+#     - mpps_integration_test    : MPPS N-CREATE/N-SET message flows
+#     - queue_persistence_test   : Message queue recovery scenarios
+#     - failover_test            : RIS failover routing
+#     - stress_test              : High volume load testing
 
 name: CI
 
