feat(hl7): implement ADT message handler for patient cache integration (#14)
Implement the adt_handler class for processing ADT (Admission, Discharge,
Transfer) messages to maintain patient demographics in the cache.

Supported ADT trigger events:
- A01 (Admit/Visit Notification): Creates new patient record in cache
- A04 (Register a Patient): Creates new outpatient record in cache
- A08 (Update Patient Information): Updates existing patient demographics
- A40 (Merge Patient): Merges patient records, transferring data from
  secondary to primary patient

Key features:
- Thread-safe message processing with mutex protection
- Integration with patient_cache for demographics storage
- Integration with hl7_dicom_mapper for patient data extraction
- ACK response generation for each processed message
- Configurable validation of patient data
- Event callbacks for patient creation, update, and merge operations
- Comprehensive statistics tracking
- Support for issuer-qualified patient ID aliases

The handler follows the existing pimpl pattern used throughout the
codebase and integrates with the established error code ranges:
- ADT error codes: -850 to -859

References:
- SRS-HL7-002: ADT Message Handler specification
- FR-1.2.1: Patient demographics cache integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,12 +112,14 @@ if(BRIDGE_BUILD_HL7)
         src/protocol/hl7/hl7_message.cpp
         src/protocol/hl7/hl7_parser.cpp
         src/protocol/hl7/hl7_builder.cpp
+        src/protocol/hl7/adt_handler.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/protocol/hl7/hl7_types.h
         include/pacs/bridge/protocol/hl7/hl7_message.h
         include/pacs/bridge/protocol/hl7/hl7_parser.h
         include/pacs/bridge/protocol/hl7/hl7_builder.h
+        include/pacs/bridge/protocol/hl7/adt_handler.h
     )
 endif()
 
