test(hl7): add comprehensive unit tests for ADT message handler (#14)
Add unit tests for the adt_handler class covering all supported ADT
trigger events and handler functionality.

Test coverage includes:

Error Code Tests:
- Verify ADT error code values (-850 to -859)
- Verify error message strings
- Test trigger event parsing (A01, A04, A08, A40)

Construction Tests:
- Default construction with patient cache
- Construction with custom configuration
- Configuration options validation

Message Handling Tests:
- can_handle() correctly identifies ADT messages
- A01 (Admit) creates new patient in cache
- A04 (Register) creates outpatient record
- A08 (Update) updates existing patient demographics
- A08 fails with patient_not_found when patient doesn't exist
- A08 creates patient when allow_a08_create is configured
- A40 (Merge) merges patient records correctly
- Non-ADT messages are rejected

Callback Tests:
- Patient created callback invocation
- Patient updated callback invocation
- Patient merged callback invocation

ACK Generation Tests:
- ACK message is generated for successful processing

Statistics Tests:
- Message processing counts are tracked
- Success/failure counts are accurate
- Per-trigger event counts are maintained
- Statistics reset works correctly

Concurrent Processing Tests:
- Thread-safe processing of multiple ADT messages
- 40 concurrent messages across 4 threads

All 18 tests pass successfully.

References:
- Issue #14: ADT Message Handler implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,6 +68,12 @@ if(BRIDGE_BUILD_HL7)
         LABELS "unit;hl7;phase1"
     )
 
+    # ADT Message Handler Tests (Issue #14)
+    add_bridge_test(adt_handler_test)
+    set_tests_properties(adt_handler_test PROPERTIES
+        LABELS "unit;hl7;adt;phase1"
+    )
+
     # HL7-DICOM Mapping Tests
     add_bridge_test(mapping_test)
     set_tests_properties(mapping_test PROPERTIES
@@ -245,6 +251,7 @@ message(STATUS "")
 message(STATUS "Tests enabled:")
 if(BRIDGE_BUILD_HL7)
     message(STATUS "  - hl7_test")
+    message(STATUS "  - adt_handler_test")
     message(STATUS "  - mapping_test")
     message(STATUS "  - router_test")
     message(STATUS "  - cache_test")
