feat(hl7): implement ORM message handler for MWL management (#15)
Implement the orm_handler class for processing ORM^O01 (Order Management)
messages to create, update, and cancel Modality Worklist (MWL) entries
in pacs_system via the MWL client.

Supported Order Control codes (ORC-1):
- NW (New Order): Creates new MWL entry from ORM message
- XO (Change Order): Updates existing MWL entry
- CA (Cancel Order): Removes MWL entry
- DC (Discontinue Order): Marks entry as discontinued
- SC (Status Change): Updates only the SPS status

Key features:
- Thread-safe message processing with pimpl pattern
- Integration with mwl_client for pacs_system communication
- Integration with hl7_dicom_mapper for ORM to MWL conversion
- ZDS segment support for pre-assigned Study Instance UID
- Auto-generation of Study Instance UID when not provided
- ACK^O01 response generation for each processed message
- Configurable validation of order data
- Event callbacks for order creation, update, cancellation, status change
- Comprehensive statistics tracking with processing time metrics

Order Status mapping (ORC-5 to MWL SPS Status):
- SC (Scheduled) -> SCHEDULED
- IP (In Progress) -> STARTED
- CM (Completed) -> COMPLETED
- CA/DC (Cancelled/Discontinued) -> DISCONTINUED

The handler follows the existing pimpl pattern used throughout the
codebase and integrates with the established error code ranges:
- ORM error codes: -860 to -869

Build system updates:
- Add orm_handler.cpp to Protocol/HL7 sources in CMakeLists.txt
- Add orm_handler.h to Protocol/HL7 headers in CMakeLists.txt

References:
- SRS-HL7-003: ORM Message Handler specification
- FR-1.2.2, FR-3.1.1 - FR-3.1.6: Order management requirements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,7 @@ if(BRIDGE_BUILD_HL7)
         src/protocol/hl7/hl7_parser.cpp
         src/protocol/hl7/hl7_builder.cpp
         src/protocol/hl7/adt_handler.cpp
+        src/protocol/hl7/orm_handler.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/protocol/hl7/hl7_types.h
@@ -120,6 +121,7 @@ if(BRIDGE_BUILD_HL7)
         include/pacs/bridge/protocol/hl7/hl7_parser.h
         include/pacs/bridge/protocol/hl7/hl7_builder.h
         include/pacs/bridge/protocol/hl7/adt_handler.h
+        include/pacs/bridge/protocol/hl7/orm_handler.h
     )
 endif()
 
