feat(pacs_adapter): implement MPPS event handler for pacs_system integration (#23)
Add mpps_handler module to receive and process MPPS (Modality Performed
Procedure Step) events from pacs_system. This is part of Phase 2: MPPS &
Bidirectional Flow implementation.

Key Features:
- Register as MPPS event listener with pacs_system MPPS SCP
- Handle N-CREATE events (IN PROGRESS status) when procedures start
- Handle N-SET events (COMPLETED/DISCONTINUED status) when procedures end
- Parse MPPS status and timing information from DICOM datasets
- Thread-safe callback invocation for downstream processing
- Automatic reconnection on disconnection with configurable retry logic
- Comprehensive statistics tracking (event counts, errors, uptime)

API Design:
- mpps_handler::create() factory function for creating handler instances
- set_callback()/clear_callback() for event notification registration
- start()/stop() for lifecycle management
- on_n_create()/on_n_set() for manual event invocation or testing

Data Structures:
- mpps_dataset: Contains all relevant MPPS attributes including patient,
  procedure, timing, and performed series information
- mpps_performed_series: Represents individual series within a procedure
- mpps_handler_config: Configuration for pacs_system connection

Error Handling:
- Comprehensive error codes in mpps_error enum (-970 to -979)
- Graceful handling of malformed MPPS datasets
- Callback exception isolation to prevent handler crashes

Utility Functions:
- validate_mpps_dataset(): Validate required MPPS attributes
- calculate_procedure_duration(): Extract timing from start/end times
- parse_mpps_status(): Convert DICOM status string to enum

Design References:
- Component ID: DES-PACS-002
- Namespace: pacs::bridge::pacs_adapter
- Traces to: FR-3.2.1 - FR-3.2.5, SRS-PACS-002

Files Added:
- include/pacs/bridge/pacs_adapter/mpps_handler.h
- src/pacs_adapter/mpps_handler.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,9 +237,11 @@ list(APPEND PACS_BRIDGE_HEADERS
 # PACS Adapter (pacs_system Integration)
 list(APPEND PACS_BRIDGE_SOURCES
     src/pacs_adapter/mwl_client.cpp
+    src/pacs_adapter/mpps_handler.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/pacs_adapter/mwl_client.h
+    include/pacs/bridge/pacs_adapter/mpps_handler.h
 )
 
 # =============================================================================
