test(pacs_adapter): add comprehensive unit tests for MPPS handler (#23)
Add unit tests for the mpps_handler module covering all functionality
including error codes, event handling, lifecycle management, statistics,
and concurrent access scenarios. Target coverage: >= 80%

Test Categories (25 tests total):
- Error Code Tests (2): Verify error code values and string conversion
- Event Type Tests (2): Test mpps_event enum and status parsing
- Dataset Tests (4): Validate mpps_dataset creation and utility methods
- Validation Tests (1): Test dataset validation for required attributes
- Duration Calculation Tests (2): Verify procedure duration calculation
- Configuration Tests (2): Test default and custom config values
- Handler Lifecycle Tests (3): Test creation, start/stop, callbacks
- Event Handler Tests (5): Test N-CREATE, N-SET (completed/discontinued),
  invalid datasets, and handler without callback
- Statistics Tests (2): Verify statistics tracking and reset
- Callback Exception Tests (1): Ensure exception isolation
- Concurrent Access Tests (1): Multi-threaded event handling stress test

Test Utilities:
- create_test_mpps_dataset(): Helper to create valid test datasets
- TEST_ASSERT macro: Assertion with file/line information
- RUN_TEST macro: Test execution with pass/fail tracking

Files Added:
- tests/mpps_handler_test.cpp

Files Modified:
- tests/CMakeLists.txt: Added mpps_handler_test with phase2 labels

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -167,12 +167,19 @@ set_tests_properties(load_test PROPERTIES
 )
 
 # =============================================================================
-# PACS Adapter Tests (Phase 1 - pacs_system Integration)
+# PACS Adapter Tests (pacs_system Integration)
 # =============================================================================
 
+# MWL Client Tests (Phase 1 - Issue #17)
 add_bridge_test(mwl_client_test)
 set_tests_properties(mwl_client_test PROPERTIES
     LABELS "unit;pacs_adapter;phase1"
+)
+
+# MPPS Handler Tests (Phase 2 - Issue #23)
+add_bridge_test(mpps_handler_test)
+set_tests_properties(mpps_handler_test PROPERTIES
+    LABELS "unit;pacs_adapter;mpps;phase2"
 )
 
 # =============================================================================
@@ -273,6 +280,7 @@ message(STATUS "  - health_check_test")
 message(STATUS "  - performance_test")
 message(STATUS "  - load_test")
 message(STATUS "  - mwl_client_test")
+message(STATUS "  - mpps_handler_test")
 message(STATUS "  - ecosystem_integration_test")
 message(STATUS "")
 message(STATUS "Phase 2 Integration Tests:")
