test(mapping): add comprehensive unit tests for DICOM to HL7 mapper
Implement unit tests for dicom_hl7_mapper covering all mapping scenarios
and utility functions as required by GitHub issue #24.

Test categories (18 tests total):
- Error code tests: verify error code range (-930 to -938)
- Configuration tests: default and custom mapper configuration
- Status mapping tests: MPPS status to HL7 order control/status codes
- Date/time conversion tests: DICOM to HL7 format conversion
- Name conversion tests: DICOM PN to HL7 XPN format
- MPPS to ORM mapping tests: IN PROGRESS, COMPLETED, DISCONTINUED
- Validation tests: required field validation, warning generation
- Series information tests: OBX segment generation

Test utilities:
- create_sample_mpps(): IN PROGRESS MPPS dataset
- create_completed_mpps(): COMPLETED with series info
- create_discontinued_mpps(): DISCONTINUED with reason

Build system updates:
- Add dicom_hl7_mapper.cpp to PACS_BRIDGE_SOURCES in CMakeLists.txt
- Add dicom_hl7_mapper.h to PACS_BRIDGE_HEADERS in CMakeLists.txt
- Add dicom_hl7_mapper_test to tests/CMakeLists.txt with phase2 label

Target test coverage: >= 85%

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,9 +139,11 @@ list(APPEND PACS_BRIDGE_HEADERS
 # Mapping Layer
 list(APPEND PACS_BRIDGE_SOURCES
     src/mapping/hl7_dicom_mapper.cpp
+    src/mapping/dicom_hl7_mapper.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/mapping/hl7_dicom_mapper.h
+    include/pacs/bridge/mapping/dicom_hl7_mapper.h
 )
 
 # Router
